.k8s/base/backend/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/component: api
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/component: api
