.k8s/base/backend/api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    description: RIMA
spec:
  rules:
  - host: api.rima.sc.inko.cloud
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
  tls:
  - hosts:
    - api.rima.sc.inko.cloud
    secretName: api-tls-crt
